GNOME Bugzilla – Bug 680435
Don't leak GParamSpec
Last modified: 2012-08-09 10:18:10 UTC
Created attachment 219474 [details] [review] Fix issue The gravatar plugin leaks a GParamSpec
commit f895188c811188f3d81fa59fb4e022135b9ad4d5 Author: Jens Georg <jensg@openismus.com> Date: Tue Jul 17 11:18:53 2012 +0200 gravatar: Don't leak GParamSpec The GParamSpecPool in the plugin registry takes a reference of the param spec so it needs to be unrefed in any case, not just in error. Under contract for Canonical Ltd. This fixes https://bugzilla.gnome.org/show_bug.cgi?id=680435 src/gravatar/grl-gravatar.c | 3 ++- 1 file changed, 2 insertions(+), 1 deletion(-)