gravatar: Don't leak GParamSpec

The GParamSpecPool in the plugin registry takes a reference of the param
spec so it needs to be unrefed in any case, not just in error.

Under contract for Canonical Ltd.

This fixes https://bugzilla.gnome.org/show_bug.cgi?id=680435